@@ -131,7 +131,7 @@ public class SegmentWindowDumpFormat extends AbstractDumpFormat {
 				try {
 					final ProgramStatement ps = Globals.memory.getStatement(address);
 					string += (ps.getPrintableBasicAssemblyStatement() + "                      ").substring(0, 22);
-					string += ((ps.getSource() == "" ? "" : new Integer(ps.getSourceLine()).toString()) + "     ")
+					string += ((ps.getSource() == "" ? "" : Integer.valueOf(ps.getSourceLine()).toString()) + "     ")
 							.substring(0, 5);
 					string += ps.getSource();
 				} catch (final AddressErrorException aee) {}
