@@ -60,7 +60,7 @@ public class SyscallRandIntRange extends AbstractSyscall {
 		//    $a1 = the upper bound of range of returned values.
 		// Return: $a0 = the next pseudorandom, uniformly distributed int value from this
 		// random number generator's sequence.
-		final Integer index = new Integer(RegisterFile.getValue(4));
+		final Integer index = Integer.valueOf(RegisterFile.getValue(4));
 		Random stream = (Random) RandomStreams.randomStreams.get(index);
 		if (stream == null) {
 			stream = new Random(); // create a non-seeded stream
