@@ -63,8 +63,8 @@ import mars.venus.VenusUI;
 public class MipsXray extends AbstractMarsToolAndApplication {
 
 	private static final long serialVersionUID = -1L;
-	private static String heading = "MIPS X-Ray - Animation of MIPS Datapath";
-	private static String version = " Version 2.0";
+	private static final String heading = "MIPS X-Ray - Animation of MIPS Datapath";
+	private static final String version = " Version 2.0";
 
 	protected Graphics g;
 	protected int lastAddress = -1; //address of instruction in memory
@@ -276,13 +276,13 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 		try {
 			runAssembleAction = new RunAssembleAction("Assemble", new ImageIcon(tk.getImage(cs.getResource(
 					Globals.imagesPath + "Assemble22.png"))), "Assemble the current file and clear breakpoints",
-					new Integer(KeyEvent.VK_A), KeyStroke.getKeyStroke(KeyEvent.VK_F3, 0), mainUI);
+					Integer.valueOf(KeyEvent.VK_A), KeyStroke.getKeyStroke(KeyEvent.VK_F3, 0), mainUI);
 
 			runStepAction = new RunStepAction("Step", new ImageIcon(tk.getImage(cs.getResource(Globals.imagesPath
-					+ "StepForward22.png"))), "Run one step at a time", new Integer(KeyEvent.VK_T), KeyStroke
+					+ "StepForward22.png"))), "Run one step at a time", Integer.valueOf(KeyEvent.VK_T), KeyStroke
 							.getKeyStroke(KeyEvent.VK_F7, 0), mainUI);
 			runBackstepAction = new RunBackstepAction("Backstep", new ImageIcon(tk.getImage(cs.getResource(
-					Globals.imagesPath + "StepBack22.png"))), "Undo the last step", new Integer(KeyEvent.VK_B),
+					Globals.imagesPath + "StepBack22.png"))), "Undo the last step", Integer.valueOf(KeyEvent.VK_B),
 					KeyStroke.getKeyStroke(KeyEvent.VK_F8, 0), mainUI);
 		} catch (final Exception e) {
 			System.out.println(
@@ -326,7 +326,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 			active = false;
 			this.isText = isText;
 			color = new Color(0, 153, 0);
-			if (isMovingXaxis == true) {
+			if (isMovingXaxis) {
 				if (init < end) {
 					direction = movingLeft;
 				} else {
@@ -551,7 +551,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 					init = datapath_mapItem.getElementsByTagName("init");
 					end = datapath_mapItem.getElementsByTagName("end");
 					//definition of colors line
-					if (instructionCode.substring(0, 6).equals("000000")) {//R-type instructions
+					if (instructionCode.startsWith("000000")) {//R-type instructions
 						color = datapath_mapItem.getElementsByTagName("color_Rtype");
 						//System.out.println("rtype");
 					} else if (instructionCode.substring(0, 6).matches("00001[0-1]")) { //J-type instructions
@@ -622,7 +622,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 			final Font fontTitle = new Font("Verdana", Font.PLAIN, 10);
 
 			TextLayout textVariable;
-			if (instructionCode.substring(0, 6).equals("000000")) {  //R-type instructions description on screen definition.		 
+			if (instructionCode.startsWith("000000")) {  //R-type instructions description on screen definition.
 				textVariable = new TextLayout("REGISTER TYPE INSTRUCTION", new Font("Arial", Font.BOLD, 25), frc);
 				g2d.setColor(Color.black);
 				textVariable.draw(g2d, 280, 30);
@@ -1121,7 +1121,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 			for (int i = 0; i < size; i++) {
 				track[i] = v.getInit() + i;
 			}
-			if (v.isActive() == true) {
+			if (v.isActive()) {
 				v.setFirst_interaction(false);
 				for (int i = 0; i < size; i++) {
 					if (track[i] <= v.getCurrent()) {
@@ -1131,7 +1131,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				}
 				if (v.getCurrent() == track[size - 1]) { v.setActive(false); }
 				v.setCurrent(v.getCurrent() + 1);
-			} else if (v.isFirst_interaction() == false) {
+			} else if (!v.isFirst_interaction()) {
 				for (int i = 0; i < size; i++) {
 					g2d.setColor(v.getColor());
 					g2d.fillRect(track[i], v.getOppositeAxis(), 3, 3);
@@ -1153,7 +1153,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				track[i] = v.getInit() - i;
 			}
 
-			if (v.isActive() == true) {
+			if (v.isActive()) {
 				v.setFirst_interaction(false);
 				for (int i = 0; i < size; i++) {
 					if (track[i] >= v.getCurrent()) {
@@ -1164,7 +1164,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				if (v.getCurrent() == track[size - 1]) { v.setActive(false); }
 
 				v.setCurrent(v.getCurrent() - 1);
-			} else if (v.isFirst_interaction() == false) {
+			} else if (!v.isFirst_interaction()) {
 				for (int i = 0; i < size; i++) {
 					g2d.setColor(v.getColor());
 					g2d.fillRect(track[i], v.getOppositeAxis(), 3, 3);
@@ -1193,7 +1193,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				}
 			}
 
-			if (v.isActive() == true) {
+			if (v.isActive()) {
 				v.setFirst_interaction(false);
 				for (int i = 0; i < size; i++) {
 					if (track[i] >= v.getCurrent()) {
@@ -1204,7 +1204,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				if (v.getCurrent() == track[size - 1]) { v.setActive(false); }
 				v.setCurrent(v.getCurrent() - 1);
 
-			} else if (v.isFirst_interaction() == false) {
+			} else if (!v.isFirst_interaction()) {
 				for (int i = 0; i < size; i++) {
 					g2d.setColor(v.getColor());
 					g2d.fillRect(v.getOppositeAxis(), track[i], 3, 3);
@@ -1226,7 +1226,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				track[i] = v.getInit() + i;
 			}
 
-			if (v.isActive() == true) {
+			if (v.isActive()) {
 				v.setFirst_interaction(false);
 				for (int i = 0; i < size; i++) {
 					if (track[i] <= v.getCurrent()) {
@@ -1237,7 +1237,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				}
 				if (v.getCurrent() == track[size - 1]) { v.setActive(false); }
 				v.setCurrent(v.getCurrent() + 1);
-			} else if (v.isFirst_interaction() == false) {
+			} else if (!v.isFirst_interaction()) {
 				for (int i = 0; i < size; i++) {
 					g2d.setColor(v.getColor());
 					g2d.fillRect(v.getOppositeAxis(), track[i], 3, 3);
@@ -1256,7 +1256,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				actionInFunctionalBlock = new TextLayout(" ", new Font("Verdana", Font.BOLD, 13), frc);
 			}
 			if (v.getName().equals("ALUVALUE")) {
-				if (instructionCode.substring(0, 6).equals("000000")) {
+				if (instructionCode.startsWith("000000")) {
 					actionInFunctionalBlock = new TextLayout(functionEquivalenceTable.get(instructionCode.substring(26,
 							32)), new Font("Verdana", Font.BOLD, 13), frc);
 				} else {
@@ -1274,7 +1274,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 					actionInFunctionalBlock = new TextLayout(" ", new Font("Verdana", Font.BOLD, 13), frc);
 				}
 			}
-			if (v.isActive() == true) {
+			if (v.isActive()) {
 				v.setFirst_interaction(false);
 				actionInFunctionalBlock.draw(g2d, v.getOppositeAxis(), v.getCurrent());
 				if (v.getCurrent() == v.getEnd()) { v.setActive(false); }
@@ -1302,10 +1302,10 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 			Vertex vert;
 			for (int i = 0; i < vertexTraversed.size(); i++) {
 				vert = vertexTraversed.get(i);
-				if (vert.isMovingXaxis == true) {
+				if (vert.isMovingXaxis) {
 					if (vert.getDirection() == Vertex.movingLeft) {
 						printTrackLtoR(vert);
-						if (vert.isActive() == false) {
+						if (!vert.isActive()) {
 							final int j = vert.getTargetVertex().size();
 							Vertex tempVertex;
 							for (int k = 0; k < j; k++) {
@@ -1314,9 +1314,10 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 								for (int m = 0; m < vertexTraversed.size(); m++) {
 									if (tempVertex.getNumIndex() == vertexTraversed.get(m).getNumIndex()) {
 										hasThisVertex = true;
+										break;
 									}
 								}
-								if (hasThisVertex == false) {
+								if (!hasThisVertex) {
 									outputGraph.get(vert.getNumIndex()).get(k).setActive(true);
 									vertexTraversed.add(outputGraph.get(vert.getNumIndex()).get(k));
 								}
@@ -1324,7 +1325,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 						}
 					} else {
 						printTrackRtoL(vert);
-						if (vert.isActive() == false) {
+						if (!vert.isActive()) {
 							final int j = vert.getTargetVertex().size();
 							Vertex tempVertex;
 							for (int k = 0; k < j; k++) {
@@ -1333,9 +1334,10 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 								for (int m = 0; m < vertexTraversed.size(); m++) {
 									if (tempVertex.getNumIndex() == vertexTraversed.get(m).getNumIndex()) {
 										hasThisVertex = true;
+										break;
 									}
 								}
-								if (hasThisVertex == false) {
+								if (!hasThisVertex) {
 									outputGraph.get(vert.getNumIndex()).get(k).setActive(true);
 									vertexTraversed.add(outputGraph.get(vert.getNumIndex()).get(k));
 								}
@@ -1345,13 +1347,13 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 				} //end of condition of X axis
 				else {
 					if (vert.getDirection() == Vertex.movingDownside) {
-						if (vert.isText == true) {
+						if (vert.isText) {
 							printTextDtoU(vert);
 						} else {
 							printTrackDtoU(vert);
 						}
 
-						if (vert.isActive() == false) {
+						if (!vert.isActive()) {
 							final int j = vert.getTargetVertex().size();
 							Vertex tempVertex;
 							for (int k = 0; k < j; k++) {
@@ -1360,9 +1362,10 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 								for (int m = 0; m < vertexTraversed.size(); m++) {
 									if (tempVertex.getNumIndex() == vertexTraversed.get(m).getNumIndex()) {
 										hasThisVertex = true;
+										break;
 									}
 								}
-								if (hasThisVertex == false) {
+								if (!hasThisVertex) {
 									outputGraph.get(vert.getNumIndex()).get(k).setActive(true);
 									vertexTraversed.add(outputGraph.get(vert.getNumIndex()).get(k));
 								}
@@ -1372,7 +1375,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 					} else {
 
 						printTrackUtoD(vert);
-						if (vert.isActive() == false) {
+						if (!vert.isActive()) {
 							final int j = vert.getTargetVertex().size();
 							Vertex tempVertex;
 							for (int k = 0; k < j; k++) {
@@ -1381,9 +1384,10 @@ public class MipsXray extends AbstractMarsToolAndApplication {
 								for (int m = 0; m < vertexTraversed.size(); m++) {
 									if (tempVertex.getNumIndex() == vertexTraversed.get(m).getNumIndex()) {
 										hasThisVertex = true;
+										break;
 									}
 								}
-								if (hasThisVertex == false) {
+								if (!hasThisVertex) {
 									outputGraph.get(vert.getNumIndex()).get(k).setActive(true);
 									vertexTraversed.add(outputGraph.get(vert.getNumIndex()).get(k));
 								}
