@@ -55,7 +55,7 @@ public class SystemIO {
 	/** Maximum number of files that can be open */
 	public static final int SYSCALL_MAXFILES = 32;
 	/** String used for description of file error */
-	public static String fileErrorString = new String("File operation OK");
+	public static String fileErrorString = "File operation OK";
 
 	private static final int O_RDONLY = 0x00000000;
 	private static final int O_WRONLY = 0x00000001;
@@ -98,7 +98,7 @@ public class SystemIO {
 		}
 
 		// Client is responsible for catching NumberFormatException
-		return new Integer(input.trim());
+		return Integer.valueOf(input.trim());
 	}
 
 	/**
@@ -252,7 +252,7 @@ public class SystemIO {
 
 		if (!FileIOData.fdInUse(fd, 1)) // Check the existence of the "write" fd
 		{
-			fileErrorString = new String("File descriptor " + fd + " is not open for writing");
+			fileErrorString = "File descriptor " + fd + " is not open for writing";
 			return -1;
 		}
 		// retrieve FileOutputStream from storage
@@ -275,10 +275,10 @@ public class SystemIO {
 			}
 			outputStream.flush();// DPS 7-Jan-2013
 		} catch (final IOException e) {
-			fileErrorString = new String("IO Exception on write of file with fd " + fd);
+			fileErrorString = "IO Exception on write of file with fd " + fd;
 			return -1;
 		} catch (final IndexOutOfBoundsException e) {
-			fileErrorString = new String("IndexOutOfBoundsException on write of file with fd" + fd);
+			fileErrorString = "IndexOutOfBoundsException on write of file with fd" + fd;
 			return -1;
 		}
 
@@ -311,7 +311,7 @@ public class SystemIO {
 
 		if (!FileIOData.fdInUse(fd, 0)) // Check the existence of the "read" fd
 		{
-			fileErrorString = new String("File descriptor " + fd + " is not open for reading");
+			fileErrorString = "File descriptor " + fd + " is not open for reading";
 			return -1;
 		}
 		// retrieve FileInputStream from storage
@@ -323,10 +323,10 @@ public class SystemIO {
 			// value represents an error, so we return 0 for EOF.  DPS 10-July-2008.
 			if (retValue == -1) { retValue = 0; }
 		} catch (final IOException e) {
-			fileErrorString = new String("IO Exception on read of file with fd " + fd);
+			fileErrorString = "IO Exception on read of file with fd " + fd;
 			return -1;
 		} catch (final IndexOutOfBoundsException e) {
-			fileErrorString = new String("IndexOutOfBoundsException on read of file with fd" + fd);
+			fileErrorString = "IndexOutOfBoundsException on read of file with fd" + fd;
 			return -1;
 		}
 		return retValue;
@@ -364,7 +364,7 @@ public class SystemIO {
 				inputStream = new FileInputStream(filename);
 				FileIOData.setStreamInUse(fdToUse, inputStream); // Save stream for later use
 			} catch (final FileNotFoundException e) {
-				fileErrorString = new String("File " + filename + " not found, open for input.");
+				fileErrorString = "File " + filename + " not found, open for input.";
 				retValue = -1;
 			}
 		} else if ((flags & O_WRONLY) != 0) // Open for writing only
@@ -374,7 +374,7 @@ public class SystemIO {
 				outputStream = new FileOutputStream(filename, (flags & O_APPEND) != 0);
 				FileIOData.setStreamInUse(fdToUse, outputStream); // Save stream for later use
 			} catch (final FileNotFoundException e) {
-				fileErrorString = new String("File " + filename + " not found, open for output.");
+				fileErrorString = "File " + filename + " not found, open for output.";
 				retValue = -1;
 			}
 		}
@@ -422,9 +422,9 @@ public class SystemIO {
 
 	private static class FileIOData {
 
-		private static String[] fileNames = new String[SYSCALL_MAXFILES]; // The filenames in use. Null if file descriptor i is not in use.
-		private static int[] fileFlags = new int[SYSCALL_MAXFILES]; // The flags of this file, 0=READ, 1=WRITE. Invalid if this file descriptor is not in use.
-		private static Object[] streams = new Object[SYSCALL_MAXFILES]; // The streams in use, associated with the filenames
+		private static final String[] fileNames = new String[SYSCALL_MAXFILES]; // The filenames in use. Null if file descriptor i is not in use.
+		private static final int[] fileFlags = new int[SYSCALL_MAXFILES]; // The flags of this file, 0=READ, 1=WRITE. Invalid if this file descriptor is not in use.
+		private static final Object[] streams = new Object[SYSCALL_MAXFILES]; // The streams in use, associated with the filenames
 
 		// Reset all file information. Closes any open files and resets the arrays
 		private static void resetFiles() {
@@ -479,12 +479,10 @@ public class SystemIO {
 		private static boolean fdInUse(final int fd, final int flag) {
 			if (fd < 0 || fd >= SYSCALL_MAXFILES) {
 				return false;
-			} else if (fileNames[fd] != null && fileFlags[fd] == 0 && flag == 0) {  // O_RDONLY read-only
+			} else // O_WRONLY write-only
+				if (fileNames[fd] != null && fileFlags[fd] == 0 && flag == 0) {  // O_RDONLY read-only
 				return true;
-			} else if (fileNames[fd] != null && (fileFlags[fd] & flag & O_WRONLY) == O_WRONLY) {  // O_WRONLY write-only
-				return true;
-			}
-			return false;
+			} else return fileNames[fd] != null && (fileFlags[fd] & flag & O_WRONLY) == O_WRONLY;
 
 		}
 
@@ -521,13 +519,13 @@ public class SystemIO {
 		private static int nowOpening(final String filename, final int flag) {
 			int i = 0;
 			if (filenameInUse(filename)) {
-				fileErrorString = new String("File name " + filename + " is already open.");
+				fileErrorString = "File name " + filename + " is already open.";
 				return -1;
 			}
 
 			if (flag != O_RDONLY && flag != O_WRONLY && flag != (O_WRONLY | O_APPEND)) // Only read and write are implemented
 			{
-				fileErrorString = new String("File name " + filename + " has unknown requested opening flag");
+				fileErrorString = "File name " + filename + " has unknown requested opening flag";
 				return -1;
 			}
 
@@ -537,15 +535,15 @@ public class SystemIO {
 
 			if (i >= SYSCALL_MAXFILES) // no available file descriptors
 			{
-				fileErrorString = new String("File name " + filename + " exceeds maximum open file limit of "
-						+ SYSCALL_MAXFILES);
+				fileErrorString = "File name " + filename + " exceeds maximum open file limit of "
+						+ SYSCALL_MAXFILES;
 				return -1;
 			}
 
 			// Must be OK -- put filename in table
-			fileNames[i] = new String(filename); // our table has its own copy of filename
+			fileNames[i] = filename; // our table has its own copy of filename
 			fileFlags[i] = flag;
-			fileErrorString = new String("File operation OK");
+			fileErrorString = "File operation OK";
 			return i;
 
 		}
