@@ -504,7 +504,7 @@ public class LabelsWindow extends JInternalFrame {
 					sortState = sortStateTransitions[sortState][realIndex];
 					tableSortComparator = tableSortingComparators[sortState];
 					columnNames = sortColumnHeadings[sortState];
-					Globals.getSettings().setLabelSortState(new Integer(sortState).toString());
+					Globals.getSettings().setLabelSortState(Integer.valueOf(sortState).toString());
 					setupTable();
 					Globals.getGui().getMainPane().getExecutePane().setLabelWindowVisibility(false);
 					Globals.getGui().getMainPane().getExecutePane().setLabelWindowVisibility(true);
